--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
-    "start": "node dist/server.js",
+    "start": "ts-node --transpile-only -r tsconfig-paths/register src/server.ts",
     "dev": "nodemon src/server.ts"
   },
   "author": "",
@@ -28,6 +27,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "mysql2": "^3.9.2",
-    "simple-messenger-blocks": "^1.3.1"
+    "simple-messenger-blocks": "^1.3.1",
+    "zod": "^3.22.4"
   }
 }
