chore: update environment configuration, add PostgreSQL and Redis setup, and enhance API routes

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,26 @@
-#config app variables 
+# Server
+PORT=8969
+NODE_ENV=development
 
-PORT=
+# Database
+DATABASE_PUBLIC_URL=postgresql://user:password@host:port/database
+
+# Redis
+REDIS_URL=redis://default:password@host:port
+
+# Facebook Messenger
 PAGE_ACCESS_TOKEN=
 MY_VERIFY_TOKEN=
-appProduction=
-analyticsServerUrl=
-analyticsAuthKey=
-collectAnalytics=
-SECONDARY_RECEIVER_ID=
 FACEBOOK_APP_ID=
+SECONDARY_RECEIVER_ID=
+
+# Analytics
+ANALYTICS_ORIGIN=
+ANALYTICS_AUTH_KEY=
+COLLECT_ANALYTICS=false
+
+# App
+APP_PRODUCTION=false
+
+#Auto Rag
+AUTO_RAG_TOKEN=GEgwo_test
