--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.28",
+    "@types/pg": "^8.16.0",
+    "drizzle-kit": "^0.31.8",
     "nodemon": "^3.1.0",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
@@ -24,9 +26,11 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.45.1",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
-    "mysql2": "^3.9.2",
+    "ioredis": "^5.9.2",
+    "pg": "^8.18.0",
     "simple-messenger-blocks": "^1.3.1",
     "zod": "^3.22.4"
   }
