--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.28",
     "@types/pg": "^8.16.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "drizzle-kit": "^0.31.8",
     "nodemon": "^3.1.0",
     "ts-node-dev": "^2.0.0",
@@ -23,6 +26,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cheerio": "^1.2.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
@@ -32,6 +36,8 @@
     "ioredis": "^5.9.2",
     "pg": "^8.18.0",
     "simple-messenger-blocks": "^1.3.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.22.4"
   }
 }
